--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .col-org{
     color: orange;
 }
-section{
+.flexible-container{
     display:flex;
     margin-bottom: 150px;
 }
@@ -35,4 +35,31 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+
+    box-shadow:10px 10px 5px gray;
+    width: 40%;
+    margin-left: 5%;
+    padding-left: 5%;
+}
+#full-stac-dev{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,cyan);
+    border-image-slice: 1;
+    
+}
+#baby-web-dev{
+    border-left: 7px solid;
+    border-image:linear-gradient(green,gray);
+    border-image-slice: 1;
+
+}
+footer p{
+    text-align: center;
 }
